--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "gulp-less": "^3.0.5",
     "gulp-plumber": "^1.0.1",
     "history": "^1.13.1",
+    "moment": "^2.10.6",
+    "reactify": "^1.1.1",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
