--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "^1.1.1",
     "electron-prebuilt": "^0.34.3",
     "electron-rebuild": "^1.0.2",
+    "electron-window-state": "^2.0.0",
     "envify": "^3.4.0",
     "fs-jetpack": "^0.7.1",
     "gulp": "^3.9.0",
